--- a/style.css
+++ b/style.css
@@ -36,10 +36,11 @@ h1 {
 .task_info {
   padding: 20px;
   border-radius: 12px;
-  background: linear-gradient(135deg, #7fbfff, #00000062);
+  background: linear-gradient(15deg, rgb(150, 169, 255), #00000062);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease-in-out;
   margin-bottom: 20px;
+  border: 2px solid whitesmoke;
 }
 
 #pinned-list .task_info {
@@ -68,14 +69,16 @@ h1 {
   margin-top: 20px;
 }
 .task-form button {
-  background-color: #007bff;
+  background-color: #000000;
   color: rgb(217, 218, 208);
-  padding: 5px 20px;
+  padding: 13px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background 0.3s ease;
   font-size: 16px;
+  margin-left: 33%;
+  width: 300px;
 }
 .task-form button:hover {
   background: #0056b3;
@@ -147,16 +150,16 @@ h1 {
 .pin {
   position: relative;
   top: 20px;
-  left: 90%;
+  left: 87%;
   color: #ffffff;
   background: #000000;
   font-size: medium;
   padding: 0.5rem;
-  border: 2px solid black;
+  border: 2px solid rgb(150, 169, 255);
   border-radius: 12px;
 }
 .pin:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
   transition: 1s;
   border-radius: 10px;
 }
